# unsupervised-bias-detection

./: pyproject.toml
.github/workflows/: ci.yml  release.yml
tests/: __init__.py  test_categorical.py  test_dataset.py  test_numerical.py  test_validation.py
unsupervised_bias_detection/cluster/: __init__.py  _bahc.py  _cluster_node.py  _kmeans.py  _kmodes.py
unsupervised_bias_detection/utils/: __init__.py  _get_column_dtypes.py  dataset.py  validation.py
