[project]
name = "unsupervised-bias-detection"
version = "1.0.0"
description = "Unsupervised detection of bias in data."
readme = "README.md"
requires-python = ">=3.11"
license = "EUPL-1.2 license"
authors = [
    {name = "NGO Algorithm Audit", email = "info@algorithmaudit.eu"}
]
dependencies = [
    "kmodes>=0.12.2",
    "numpy>=2.4.3",
    "scikit-learn>=1.8.0",
]

[project.urls]
"Repository" = "https://github.com/NGO-Algorithm-Audit/unsupervised-bias-detection"

[dependency-groups]
dev = [
    "fairlearn>=0.13.0",
    "pandas>=3.0.1",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]

[tool.pytest.ini_options]
testpaths = ["tests", "unsupervised_bias_detection"]
addopts = "--verbose --showlocals --full-trace --color=yes --doctest-modules"

[tool.ruff]
# Set the maximum line length to 88 (Black's default)
line-length = 88

# Assume Python 3.12+
target-version = "py312"

# Exclude common directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "__pycache__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
# Enable these rule categories
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "ARG",   # flake8-unused-arguments
    "SIM",   # flake8-simplify
    "NPY",   # NumPy-specific rules
    "PD",    # pandas-vet
    "RUF",   # Ruff-specific rules
    "D",     # pydocstyle (docstring conventions)
]

# Disable specific rules if needed
ignore = [
    "D202",  # no blank lines allowed after docstring
    "D203",  # 1 blank line required before class docstring (conflicts with D211)
    "D212",  # multi-line docstring summary should start at first line (conflicts with D213)
]

# Allow autofix for all enabled rules (when `--fix` is provided)
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
# Ignore specific rules in specific files
"__init__.py" = ["F401"]  # unused imports in __init__.py
"tests/**/*.py" = [
    "S101",   # use of assert detected
    "ARG",    # unused function arguments
    "FBT",    # boolean trap
]

[tool.ruff.lint.isort]
# Configure import sorting
known-first-party = ["unsupervised_bias_detection"]
force-sort-within-sections = true
split-on-trailing-comma = false

[tool.ruff.lint.mccabe]
# Set complexity threshold
max-complexity = 10

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Respect magic trailing commas
skip-magic-trailing-comma = false

# Auto-format docstrings
docstring-code-format = true

# Line ending style
line-ending = "auto"
